removed div and moved canvas-skills-grid class to header, move nnav div above header

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -115,46 +115,43 @@
     </script>
   </head>
   <body class="fonts-loading">
-    <header>
-      <div id="nav"></div>
-      <div class="canvas-skills-grid">
-        <picture>
-          <!-- Desktop ≥ 1025px -->
-          <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
-            media="(min-width: 941px)"
-            type="image/avif" />
+    <div id="nav"></div>
+    <header class="canvas-skills-grid">
+      <picture>
+        <!-- Desktop ≥ 1025px -->
+        <source
+          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+          media="(min-width: 941px)"
+          type="image/avif" />
 
-          <!-- Tablet ≥ 769px -->
-          <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916,h_515/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
-            media="(min-width: 769px) and (max-width: 940px)"
-            type="image/avif" />
+        <!-- Tablet ≥ 769px -->
+        <source
+          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916,h_515/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
+          media="(min-width: 769px) and (max-width: 940px)"
+          type="image/avif" />
 
-          <!-- Mobile ≤ 768px -->
-          <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
-            media="(min-width: 481px) and (max-width: 768px)"
-            type="image/avif" />
+        <!-- Mobile ≤ 768px -->
+        <source
+          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+          media="(min-width: 481px) and (max-width: 768px)"
+          type="image/avif" />
 
-          <!-- Fallback -->
-          <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_456,h_256/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
-            alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
-            width="456"
-            height="256"
-            fetchpriority="high"
-            loading="eager"
-            decoding="async"
-            style="object-fit: cover; aspect-ratio: 16 / 9; width: 100%; height: auto;"
-          />
-        </picture>
-        <div class="canvas-skills-title">
-          <h1>a canvas of code:</h1>
-          <h2>showcasing the craft</h2>
-        </div>
+        <!-- Fallback -->
+        <img
+          src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_456,h_256/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+          alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
+          width="456"
+          height="256"
+          fetchpriority="high"
+          loading="eager"
+          decoding="async"
+          style="object-fit: cover; aspect-ratio: 16 / 9; width: 100%; height: auto;"
+        />
+      </picture>
+      <div class="canvas-skills-title">
+        <h1>a canvas of code:</h1>
+        <h2>showcasing the craft</h2>
       </div>
-
     </header>
     <main class="about-me" id="projects">
       <section id="description">
