splid up orinal projects1 page into smaller section, created file for this project, created individual pages, updated collections page

--- a/pages/project1/project1.html
+++ b/pages/project1/project1.html
@@ -57,6 +57,13 @@
       imagesizes="480px"
     />
 
+    <link
+      class="tab-logo"
+      rel="icon"
+      href="/img/white_favicon/favicon.ico"
+      type="image/icon type"
+    />
+
     <link rel="preload" href="/styles/styles-article.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -194,7 +201,7 @@
         <div class="resume-date fancy-border project-title">
           <h2>project 1 | the grade</h2>
         </div>
-        <div class="grade-img fancy-border-img" id="grade-img">
+        <div class="grade-img fancy-border-img images" id="grade-img">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_840,h_705/v1743469949/seo-grade_mmztmf.avif"
@@ -210,7 +217,6 @@
             />
             <img 
               src="/img/seo-grade-mobile.avif"
-              alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
               alt="Tech Trends Blog SEO grade result showing performance and optimization"
               width="292"
               height="252"
@@ -243,7 +249,7 @@
           </div>
           <div class="button-grid">
             <div class="click-me">
-              <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">design decoded</a>
+              <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">final design</a>
             </div>
             <div class="click-me">  
               <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
@@ -254,7 +260,7 @@
           <h2>the grade: desktop</h2>
           <h2><i>page speed insights</i></h2>
         </div>
-        <div class="grade-table fancy-border-img" id="grade-table-img1">
+        <div class="grade-table fancy-border-img images" id="grade-table-img1">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_616,h_518,/v1747614027/desktop-grades_kretmv.avif"
@@ -283,7 +289,7 @@
         <div class="resume-date fancy-border project-title">
           <h2>where we started</h2>
         </div>
-        <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img1">
+        <div class="pagespeed-container fancy-border-img images" id="pagespeed-grade-img1">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_617,h_627/v1742916681/tech-trends-start-desktop_cbbbqf.avif"
@@ -309,7 +315,7 @@
             />
           </picture>
         </div>
-        <div class="resume-date fancy-border project-title">
+        <div class="resume-date fancy-border project-title images">
           <h3>where we finished</h3>
         </div>
 
@@ -343,7 +349,7 @@
           <h2>the grade: mobile</h2>
           <h2>page speed insights</h2>
         </div>
-        <div class="grade-table fancy-border-img" id="grade-table-img2">
+        <div class="grade-table fancy-border-img images" id="grade-table-img2">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_636,h_538/v1747614027/mobile-grades_upcfff.avif"
@@ -372,7 +378,7 @@
         <div class="resume-date fancy-border project-title">
           <h2>where we started</h2>
         </div>
-        <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img3">
+        <div class="pagespeed-container fancy-border-img images" id="pagespeed-grade-img3">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_617,h_655/v1742916681/tech-trends-start-mobile_beu2ct.avif"
@@ -401,7 +407,7 @@
         <div class="resume-date fancy-border project-title">
           <h2>where we finished</h2>
         </div>
-        <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img4">
+        <div class="pagespeed-container fancy-border-img images" id="pagespeed-grade-img4">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_617,h_655/v1742916682/tech-trends-finish-mobile_ca3hzy.avif"
@@ -431,7 +437,7 @@
           <h2>the grade:</h2>
           <h2>hubspot</h2>
         </div>
-        <div class="hubspot fancy-border-img" id="hubspot">
+        <div class="hubspot fancy-border-img images2" id="hubspot">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_617,h_881/v1732986926/hubspot-grade_hnuolf.avif"
@@ -459,7 +465,7 @@
         </div>
       </section>
       <section id="cta-section" id="section4">
-        <div class="author-bio-container fancy-border-img" id="author-cta">
+        <div class="author-bio-container fancy-border-img images" id="author-cta">
           <picture> 
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_632,h_275/v1746550616/allisonstock-black-logo_yalqqx.avif"
@@ -506,7 +512,7 @@
           <h2>project 1 | the design</h2>
           <h2>inspiration meets innovation</h2>
         </div>
-        <div class="mood-baord fancy-border-img" id="mood-baord">
+        <div class="mood-baord fancy-border-img images" id="mood-baord">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_585,h_490/v1742918096/website-design-tech-trends_xbwosg.avif"
@@ -550,7 +556,7 @@
           <h2>project 1 | the design</h2>
           <h2>past meets future</h2>
         </div>
-        <div class="past-meets-future fancy-border-img" id="past-meets-future-img">          
+        <div class="past-meets-future fancy-border-img images" id="past-meets-future-img">          
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_837,h_975/v1747144506/past-meets-future_pmafy7.avif"
@@ -592,7 +598,7 @@
         <div class="resume-date fancy-border project-title" id="wireframe">
           <h2>project 1 | the frame</h2>
         </div>
-        <div class="wireframe-img fancy-border-img" id="wireframe-img1">  
+        <div class="wireframe-img fancy-border-img images2" id="wireframe-img1">  
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_585,h_1985/v1742921918/homepage-wireframe-tech-trends_s2lkfs.avif"
@@ -619,7 +625,7 @@
             />
           </picture>
         </div>
-        <div class="wireframe-img fancy-border-img" id="wireframe-img2">  
+        <div class="wireframe-img fancy-border-img images2" id="wireframe-img2">  
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_585,h_1057/v1747145733/category-wireframe-tech-trends_ughnnv.avif"
@@ -646,7 +652,7 @@
             />
           </picture>
         </div>
-        <div class="wireframe-img fancy-border-img" id="wireframe-img3">
+        <div class="wireframe-img fancy-border-img images2" id="wireframe-img3">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_585,h_1990/v1742921918/article-wireframe-tech-trends_mz3vf6.avif"
@@ -691,7 +697,7 @@
         <div class="resume-date fancy-border project-title">
           <h2>Project 3 | The Case Study</h2>
         </div>
-        <div class="cute-robot fancy-border-img" id="cute-robot"> 
+        <div class="cute-robot fancy-border-img images" id="cute-robot"> 
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_730,h_548/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
@@ -835,7 +841,7 @@
         </article>
       </section>
       <section id="contact">
-        <div class="author-bio-container fancy-border-img" id="author-bio">
+        <div class="author-bio-container fancy-border-img images" id="author-bio">
           <picture> 
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_632,h_275/v1746550616/allisonstock-black-logo_yalqqx.avif"
@@ -880,11 +886,12 @@
     </main>
     <div id="side-nav" class="hidden">
       <ul>
-        <li><a href="#description">introduction</a></li>
-        <li><a href="#the-grade">the grade</a></li>
-        <li><a href="#the-design">the design</a></li>
-        <li><a href="#wireframe">the wireframe</a></li>
-        <li><a href="#casestudy">the case study</a></li>
+        <li><a href="/pages/collections.html">the projects</a></li>
+        <li><a href="/pages/project1/project1-intro.html#the-menu">the "menu"</a></li>
+        <li><a href="https://github.com/Allison2002/tech-trends.git">the code</a></li>
+        <li><a href="/pages/project1/project1-the-grade.html">the grade</a></li>
+        <li><a href="/pages/project1/project1-the-design.html">the design</a></li>
+        <li><a href="/pages/project1/project1-the-casestudy.html">the casestudy</a></li>
         <li><a href="#contact">the contact me</a></li>
       </ul>
     </div>
