--- a/assets/footer.html
+++ b/assets/footer.html
@@ -21,17 +21,17 @@
       <footer id="nav">
         <div class="footer-logo">
           <img       
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_2244,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto:best,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
             alt="Photo of Genny Allison, the web developer and AI content specialist"
-            width="425"
-            height="auto"
+            width="384"
+            height="240"
             loading="lazy"
             fetchpriority="low"
-            style="object-fit: cover;aspect-ratio: 2.0769 / 1;"
+            style="object-fit: contain; aspect-ratio: 16 / 10;"
             decoding="async" 
           />
         </div>
-        <div class="footer-links">
+        <div class="footer-links" id="footer-links">
           <ul>
             <li><a href="/index.html" class="links">my home</a></li>           
             <li><a href="/pages/about.html" class="links">about me</a></li>
