updated all links

--- a/pages/collections.html
+++ b/pages/collections.html
@@ -78,7 +78,87 @@
     <noscript><link rel="stylesheet" href="/styles/styles.css"></noscript>
 
     <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
-
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "CollectionPage",
+        "name": "Genny Allison | AI Content Creator & SEO Specialist Portfolio Projects",
+        "url": "https://tech-trends-blog.netlify.app/pages/collections.html",
+        "description": "Explore portfolio projects by Genny Allison, an AI Content Creator & SEO Specialist. Each project showcases performance-driven development, WCAG accessibility, Core Web Vitals optimization, and creative AI-powered content solutions.",
+        "inLanguage": "en",
+        "author": {
+          "@type": "Person",
+          "name": "Genny Allison",
+          "url": "https://gennyallison.netlify.app",
+          "jobTitle": "AI Content Creator & SEO Specialist",
+          "sameAs": [
+            "https://www.linkedin.com/in/genny-allison/",
+            "https://github.com/Allison2002"
+          ]
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Allison Stock Inc.",
+          "url": "https://gennyallison.netlify.app",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550616/allisonstock-black-logo_yalqqx.avif",
+            "width": 531,
+            "height": 255
+          }
+        },
+        "hasPart": [
+          {
+            "@type": "CreativeWork",
+            "name": "Project 1: Tech Trends Blog",
+            "url": "https://tech-trends-blog.netlify.app",
+            "mainEntityOfPage": "https://tech-trends-blog.netlify.app/pages/project1/project1-intro.html",
+            "image": "https://res.cloudinary.com/dnptzisuf/image/upload/v1743014132/project1-thumbnail_palgve.avif",
+            "description": "AI-driven blog optimized for SEO and performance. Achieved a perfect PageSpeed score with accessibility and responsive design."
+          },
+          {
+            "@type": "CreativeWork",
+            "name": "Project 2: Sports Tube",
+            "url": "https://sports-tube.netlify.app/",
+            "mainEntityOfPage": "https://tech-trends-blog.netlify.app/pages/project2.html",
+            "image": "https://res.cloudinary.com/dnptzisuf/image/upload/v1743014132/project2-thumbnail_z7t2rk.avif",
+            "description": "Video-centric sports platform designed with performance and UI/UX in mind. Built using modern front-end techniques."
+          },
+          {
+            "@type": "CreativeWork",
+            "name": "Project 3: Sports Tube Community Blog",
+            "url": "https://sports-tube-community.netlify.app/",
+            "mainEntityOfPage": "https://tech-trends-blog.netlify.app/pages/project3.html",
+            "image": "https://res.cloudinary.com/dnptzisuf/image/upload/v1743014132/project3-thumbnail_m2okuz.avif",
+            "description": "Community blog with AI-generated content, SEO-optimized structure, and a comic-inspired WCAG-accessible layout."
+          },
+          {
+            "@type": "CreativeWork",
+            "name": "Project 4: Texas Remodelers Sample Site",
+            "url": "https://texas-remodelers-sample.netlify.app/",
+            "mainEntityOfPage": "https://tech-trends-blog.netlify.app/pages/project4.html",
+            "image": "https://res.cloudinary.com/dnptzisuf/image/upload/v1743014132/project4-thumbnail_e5nrva.avif",
+            "description": "Professional service site built for remodelers, showcasing clean code, accessibility features, and performance testing."
+          },
+          {
+            "@type": "CreativeWork",
+            "name": "Project 5: Parent Tech Support Video Page",
+            "url": "https://parenttech.support/videos/",
+            "mainEntityOfPage": "https://tech-trends-blog.netlify.app/pages/project5.html",
+            "image": "https://res.cloudinary.com/dnptzisuf/image/upload/v1743017418/project5-thumbnail_ljotky.avif",
+            "description": "Family tech support video resource page with organized grid layout, accessible navigation, and clear UI."
+          },
+          {
+            "@type": "CreativeWork",
+            "name": "Project 6: Mario Race Animation",
+            "url": "https://mario-race.netlify.app/",
+            "mainEntityOfPage": "https://tech-trends-blog.netlify.app/pages/project6.html",
+            "image": "https://res.cloudinary.com/dnptzisuf/image/upload/v1743017418/project6-thumbnail_ws3h0z.avif",
+            "description": "JavaScript animation of Mario & Luigi racing. Features custom graphics, smooth transitions, and pure front-end logic."
+          }
+        ]
+      }
+    </script>
   </head>
   <body class="fonts-loading">
     <header>
@@ -129,12 +209,13 @@
           </div>
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
-              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1880,fl_lossy/v1743014132/project1-thumbnail_palgve.avif" 
-                alt=""
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_339,h_285/v1743014132/project1-thumbnail_palgve.avif" 
+                alt="Thumbnail for Project 1: Tech Trends Blog optimized with AI content and SEO best practices"
+
                 type="image/avif"
-                width="100%"
-                height="auto"
-                apect-ratio="1.19 / 1"
+                width="339"
+                height="285"
+                style="object-fit: contain;"
               />
             </div>
             <div class="collection-links">
@@ -158,12 +239,12 @@
           </div>
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
-              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1880,fl_lossy/v1743014132/project2-thumbnail_z7t2rk.avif" 
-                alt=""
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_339,h_285/v1743014132/project2-thumbnail_z7t2rk.avif" 
+                alt="Thumbnail for Project 1: Tech Trends Blog optimized with AI content and SEO best practices"
                 type="image/avif"
-                width="100%"
-                height="auto"
-                apect-ratio="1.19 / 1"
+                width="339"
+                height="285"
+                style="object-fit: contain;"
               />
             </div>
             <div class="collection-links">
@@ -172,10 +253,10 @@
               </div>
               <div class="collections-button-grid">
                 <div class="collections-click-me">
-                  <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">final design</a>
+                  <a href="https://sports-tube.netlify.app/" target="_blank" rel="noopener noreferrer">final design</a>
                 </div>
                 <div class="click-me">  
-                  <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
+                  <a href="https://github.com/Allison2002/my_tube.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                 </div>
               </div>
             </div>
@@ -187,12 +268,13 @@
           </div>
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
-              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1880,fl_lossy/v1743014132/project3-thumbnail_m2okuz.avif" 
-                alt=""
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_339,h_285/v1743014132/project3-thumbnail_m2okuz.avif" 
+                alt="Thumbnail for Project 3: UI/UX case study focusing on user experience and interactive design"
+
                 type="image/avif"
-                width="100%"
-                height="auto"
-                apect-ratio="1.19 / 1"
+                width="339"
+                height="285"
+                style="object-fit: contain;"
               />
             </div>
             <div class="collection-links">
@@ -201,10 +283,10 @@
               </div>
               <div class="collections-button-grid">
                 <div class="collections-click-me">
-                  <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">final design</a>
+                  <a href="https://sports-tube-community.netlify.app/" target="_blank" rel="noopener noreferrer">final design</a>
                 </div>
                 <div class="click-me">  
-                  <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
+                  <a href="https://github.com/Allison2002/sports_tube_community.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                 </div>
               </div>
             </div>
@@ -219,12 +301,13 @@
           <div class="collections-container">
 
             <div class="collections-thumbnail fancy-border-img">
-              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1880,fl_lossy/v1743014132/project4-thumbnail_e5nrva.avif" 
-                alt=""
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_339,h_285/v1743014132/project4-thumbnail_e5nrva.avif" 
+                alt="Thumbnail for Project 4: Web performance project showcasing Core Web Vitals optimization"
+
                 type="image/avif"
-                width="100%"
-                height="auto"
-                apect-ratio="1.19 / 1"
+                width="339"
+                height="285"
+                style="object-fit: contain;"
               />
             </div>
             <div class="collection-links">
@@ -233,10 +316,10 @@
               </div>
               <div class="collections-button-grid">
                 <div class="collections-click-me">
-                  <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">final design</a>
+                  <a href="https://texas-remodelers-sample.netlify.app/" target="_blank" rel="noopener noreferrer">final design</a>
                 </div>
                 <div class="click-me">  
-                  <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
+                  <a href="https://github.com/Allison2002/texas-remodelers-sample.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                 </div>
               </div>
             </div>
@@ -248,12 +331,12 @@
           </div>
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
-              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1880,fl_lossy/v1743017418/project5-thumbnail_ljotky.avif" 
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_339,h_285/v1743017418/project5-thumbnail_ljotky.avif" 
                 alt=""
                 type="image/avif"
-                width="100%"
-                height="auto"
-                apect-ratio="1.19 / 1"
+                width="339"
+                height="285"
+                style="object-fit: contain;"
               />
             </div>
             <div class="collection-links">
@@ -262,10 +345,7 @@
               </div>
               <div class="collections-button-grid">
                 <div class="collections-click-me">
-                  <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">final design</a>
-                </div>
-                <div class="click-me">  
-                  <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
+                  <a href="https://parenttech.support/videos/" target="_blank" rel="noopener noreferrer">final design</a>
                 </div>
               </div>
             </div>
@@ -277,12 +357,12 @@
           </div>
             <div class="collections-container">
               <div class="collections-thumbnail fancy-border-img">
-                <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1880,fl_lossy/v1743017418/project6-thumbnail_ws3h0z.avif" 
+                <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_339,h_285/v1743017418/project6-thumbnail_ws3h0z.avif" 
                   alt=""
                   type="image/avif"
-                  width="100%"
-                  height="auto"
-                  apect-ratio="1.19 / 1"
+                  width="339"
+                height="285"
+                style="object-fit: contain;"
                 />
               </div>
               <div class="collection-links">
@@ -291,10 +371,10 @@
               </div>
               <div class="collections-button-grid">
                 <div class="collections-click-me">
-                  <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">final design</a>
+                  <a href="https://mario-race.netlify.app/" target="_blank" rel="noopener noreferrer">final design</a>
                 </div>
                 <div class="click-me">  
-                  <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
+                  <a href="https://github.com/Allison2002/MarioKart.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                 </div>
               </div>
             </div>
