updated styles link on index

--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <title>Genny Allison | Front End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore the portfolio of Genny Allison, a front-end developer focused on crafting responsive, user-centered web experiences. Specializing in UI/UX design and functional coding, Genny brings seamless design and development together for an engaging digital presence.">
-    <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
 
     <link rel="preload" href="/styles/styles-index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
-    <noscript><link rel="stylesheet" href="/styles/styles-index.css"></noscript>
+    <link
+      class="tab-logo"
+      rel="icon"
+      href="/img/white_favicon/favicon.ico"
+      type="image/icon type"
+    />
+
+    <link rel="preload" href="/styles/styles-article.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <link rel="preload" href="/styles/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <noscript><link rel="stylesheet" href="/styles/styles-article.css"></noscript>
+    <noscript><link rel="stylesheet" href="/styles/styles.css"></noscript>
 
     <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
   </head>
