removed blank page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore the portfolio of Genny Allison, a front-end developer focused on crafting responsive, user-centered web experiences. Specializing in UI/UX design and functional coding, Genny brings seamless design and development together for an engaging digital presence.">
 
+    <link rel="preload" href="/styles/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
     <link rel="preload" href="/styles/styles-index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
